manifests/fullstack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstack-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /config
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
